<?xml version="1.0"?>
<package format="2">
  <name>path_planner_vpetrov</name> 
  <version>0.0.1</version>
  <description>Path planner package for Turtlebot3 by Vladimir Petrov</description>

  <maintainer email="v.petrov.18.02.94@gmail.com">Vladimir Petrov</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Custom path planner package -->
  </export>
</package>
